WEBSITE-2852 - UI issue logging-in mobile entrypage on ios device.

--- a/assets/sass/components/_modal.scss
+++ b/assets/sass/components/_modal.scss
@@ -94,13 +94,6 @@
 
 // Browsers which fully support CSS Environment variables (iOS 11.2+).
 @supports (padding-top: env(safe-area-inset-top)) and (-webkit-touch-callout: none) {
-  .modal-content {
-    --safe-area-inset-top: env(safe-area-inset-top);
-    height: calc(100% + var(--safe-area-inset-top));
-  }
-}
-
-@supports (padding-top: env(safe-area-inset-top)) and (-webkit-touch-callout: none) {
 .modal-overlay {
         --safe-area-inset-top: env(safe-area-inset-top);
         height: calc(100% + var(--safe-area-inset-top));
